--- a/01api/petstore-api-buildspec.yml
+++ b/01api/petstore-api-buildspec.yml
@@ -4,9 +4,9 @@ phases:
     commands:
       - cd 01api
       - aws cloudformation package --template-file petstore-api.yaml
-                                   --s3-bucket <REPLACE_ME_WITH_UNIQUE_BUCKET_NAME>
-                                   --s3-prefix api-code
-                                   --output-template-file petstore-api-output.yaml
+        --s3-bucket aws-codebuild-postman-test-456
+        --s3-prefix api-code
+        --output-template-file petstore-api-output.yaml
 artifacts:
   type: zip
   files:
